# tusb_gamepad_ds4_to_xinput_pico-sdk

./: .gitmodules  CMakeLists.txt  README.md
src/: hid_app.c  main.c  tusb_config.h
